Integracion de apis backend java

--- a/src/app/pages/otros/otros.component.html
+++ b/src/app/pages/otros/otros.component.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Datos Generales</title>
 </head>
+
 <body>
 
-  <div class="container ">
-    <div class="row ">
-      <div class="col-md-12">
-        <div class="campo">
-          <div class="input-group mb-3">
-            <label for="">Correo Electrónico&nbsp;&nbsp;</label>
-            <input type="text" placeholder="Dirección:" [(ngModel)]="email" class="form-control inputText01">
-            <label for="">&nbsp;&nbsp;Página Web&nbsp;&nbsp;</label>
-            <input type="text" class="form-control inputText01" placeholder="Dirección:"/>
+  <div class="container">
+    <div class="m-card">
+      <div class="row ">
+        <div class="flex justify-between items-center pr-2 pb-2">
+          <h2></h2>
+        </div>
+        <div class="col-md-12">
+          <div class="campo">
+            <div class="input-group mb-3">
+              <label for="">Correo Electrónico&nbsp;&nbsp;</label>
+              <input type="text" placeholder="Dirección:" [(ngModel)]="email" class="form-control inputText01">
+              <label for="">&nbsp;&nbsp;Página Web&nbsp;&nbsp;</label>
+              <input type="text" class="form-control inputText01" placeholder="Dirección:" />
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-6 pt-2 campo" >
-        <div class="input-group mb-3">
-          <label for="">Comentario</label>
-          <textarea id="exampleFormControlTextarea1" class="form-control" rows="3"></textarea>
+        <div class="col-md-6 pt-2 campo">
+          <div class="input-group mb-3">
+            <label for="">Comentario</label>
+            <textarea id="exampleFormControlTextarea1" class="form-control" rows="3"></textarea>
 
+          </div>
         </div>
       </div>
     </div>
   </div>
-  
-  
+
+
 </body>
+
 </html>
