--- a/src/app/pages/establecimiento/modals/md-establec-distrito/md-establec-distrito.component.html
+++ b/src/app/pages/establecimiento/modals/md-establec-distrito/md-establec-distrito.component.html
@@ -1,1 +1,76 @@
-<p>md-establec-distrito works!</p>
+<div class="flex flex-col gap-2 p-2">
+  <div class="header">
+    <h3>Busqueda de Entidad</h3>
+    <button class="btn_modal_header" (click)="onNoClick()">
+      <span class="material-icons">close</span>
+    </button>
+  </div>
+</div>
+<div class="grid grid-cols gap-4 p-2">
+  <div class="col-start-1 col-end-5 m-card">
+    <div class="flex w-full">
+      <div class="flex flex-col gap-4 w-full p-4">
+        <div class="campo">
+          <label for="">Departamento:</label>
+          <input type="text" class="form-control inputText01" readonly [value]="textoDepartamento">
+          <button class="boton-icon"><span class="material-icons">search</span></button>
+        </div>
+        <div class="campo">
+          <label for="">Provincia:</label>
+          <input type="text" class="form-control inputText01" readonly [value]="textoProvincia">
+          <button class="boton-icon"><span class="material-icons">search</span></button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="grid grid-cols gap-4 p-2">
+  <div class="col-start-1 col-end-5 m-card">
+    <div class="flex w-full">
+      <div class="flex flex-col gap-1 w-full p-4">
+        <div class="campo">
+          <label for="">Buscar Por:</label>
+          <ng-select [items]="listOpcionesBusqueda"
+            bindLabel="nombre"
+            bindValue="codigo"
+            (change)="onChangeBuscarPor($event)"
+          >
+          </ng-select>
+        </div>
+      </div>
+      <div class="flex flex-col gap-1 w-full p-4">
+        <div class="campo">
+          <label for="">Expresión:</label>
+          <input type="text" class="form-control inputText01" (keyup)="onExpresion($event)">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="grid grid-cols gap-4 p-2">
+  <table mat-table [dataSource]="dataSource" class="table border">
+
+    <ng-container matColumnDef="distrito">
+      <th mat-header-cell *matHeaderCellDef>Distrito</th>
+      <td mat-cell *matCellDef="let element"> {{element.DISDESCRIP}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="provincia">
+      <th mat-header-cell *matHeaderCellDef> Provincia </th>
+      <td mat-cell *matCellDef="let element"> {{element.PRVDESCRIP}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="departamento">
+      <th mat-header-cell *matHeaderCellDef> Departamento </th>
+      <td mat-cell *matCellDef="let element"> {{element.DPTDESCRIP}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row (click)="selectRow(row)" *matRowDef="let row; columns: displayedColumns;"
+    ></tr>
+  </table>
+  <mat-paginator [pageSizeOptions]="[3, 6, 9]"
+                 showFirstLastButtons
+                 aria-label="Select page of periodic elements">
+  </mat-paginator>
+</div>
