--- a/src/app/pages/establecimiento/tab-establec-actividades/tab-establec-actividades.component.html
+++ b/src/app/pages/establecimiento/tab-establec-actividades/tab-establec-actividades.component.html
@@ -1,1 +1,103 @@
-<p>tab-establec-actividades works!</p>
+<div class="grid grid-cols-6 p-2">
+  <div class="col-start-1 col-end-4 m-card">
+    <div class="flex w-full">
+      <h2 style="margin: 10px; width: 100%;">Actividades</h2>
+      <div class="campo">
+        <button class="boton-icon"><span class="material-icons" title="nuevo">add</span></button>
+        <button class="boton-icon"><span class="material-icons" title="editar">edit</span></button>
+        <button class="boton-icon"><span class="material-icons" title="eliminar">remove</span></button>
+      </div>
+    </div>
+    <div class="grid grid-cols gap-4 p-2">
+      <table mat-table [dataSource]="dataSourceActividades" class="table border">
+        <ng-container matColumnDef="actividad">
+          <th mat-header-cell *matHeaderCellDef>Actividades</th>
+          <td mat-cell *matCellDef="let element"> {{element.DPTDESCRIP}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumnsActividades"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumnsActividades;"
+        ></tr>
+      </table>
+      <mat-paginator [pageSizeOptions]="[3, 6, 9]"
+                     showFirstLastButtons
+                     aria-label="Select page of periodic elements">
+      </mat-paginator>
+    </div>
+  </div>
+  <div class="col-start-4 col-end-7 m-card">
+    <div class="flex w-full">
+      <h2 style="margin: 10px; width: 100%">Comercializa Productos Controlados</h2>
+      <div class="campo">
+        <mat-radio-group aria-label="Select an option" [(ngModel)]="opcionSeleccionadaProductControlados" (change)="onSeleccionarProductControlados($event)">
+          <mat-radio-button value="1">Sí</mat-radio-button>
+          <mat-radio-button value="2">No</mat-radio-button>
+        </mat-radio-group>
+      </div>
+      <div class="campo" *ngIf="opcionSeleccionadaProductControlados != null && opcionSeleccionadaProductControlados == '1'">
+        <button class="boton-icon"><span class="material-icons" title="nuevo">add</span></button>
+        <button class="boton-icon"><span class="material-icons" title="editar">edit</span></button>
+        <button class="boton-icon"><span class="material-icons" title="eliminar">remove</span></button>
+      </div>
+    </div>
+    <div class="grid grid-cols gap-4 p-2">
+      <table mat-table [dataSource]="dataSourceProductosControlados" class="table border">
+        <ng-container matColumnDef="tipoProductoControlado">
+          <th mat-header-cell *matHeaderCellDef>Tipo de Prod. Controlado</th>
+          <td mat-cell *matCellDef="let element"> {{element.DPTDESCRIP}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumnsProductosControlados"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumnsProductosControlados;"
+        ></tr>
+      </table>
+      <mat-paginator [pageSizeOptions]="[3, 6, 9]"
+                     showFirstLastButtons
+                     aria-label="Select page of periodic elements">
+      </mat-paginator>
+    </div>
+  </div>
+</div>
+<div class="grid grid-cols gap-4 p-2">
+  <div class="col-start-1 col-end-4 m-card">
+    <div class="flex w-full">
+      <h2 style="margin: 10px; width: 100%">Grupo de Productos</h2>
+      <div class="campo">
+        <button class="boton-icon"><span class="material-icons" title="nuevo">add</span></button>
+        <button class="boton-icon"><span class="material-icons" title="editar">edit</span></button>
+        <button class="boton-icon"><span class="material-icons" title="eliminar">remove</span></button>
+      </div>
+    </div>
+    <div class="grid grid-cols gap-4 p-2">
+      <table mat-table [dataSource]="dataSourceGrupoProductos" class="table border">
+        <ng-container matColumnDef="clasificacion">
+          <th mat-header-cell *matHeaderCellDef>Clasificación</th>
+          <td mat-cell *matCellDef="let element"> {{element.DPTDESCRIP}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="subClasificacion">
+          <th mat-header-cell *matHeaderCellDef>Sub Clasificación</th>
+          <td mat-cell *matCellDef="let element"> {{element.DPTDESCRIP}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="grupoDeProducto">
+          <th mat-header-cell *matHeaderCellDef>Grupo de Producto</th>
+          <td mat-cell *matCellDef="let element"> {{element.DPTDESCRIP}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="subGrupo">
+          <th mat-header-cell *matHeaderCellDef>Sub Grupo</th>
+          <td mat-cell *matCellDef="let element"> {{element.DPTDESCRIP}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumnsGrupoProductos"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumnsGrupoProductos;"
+        ></tr>
+      </table>
+      <mat-paginator [pageSizeOptions]="[3, 6, 9]"
+                     showFirstLastButtons
+                     aria-label="Select page of periodic elements">
+      </mat-paginator>
+    </div>
+  </div>
+</div>
