--- a/src/app/pages/establecimiento/tab-establec-actividades/tab-establec-actividades.component.html
+++ b/src/app/pages/establecimiento/tab-establec-actividades/tab-establec-actividades.component.html
@@ -63,31 +63,41 @@
     <div class="flex w-full">
       <h2 style="margin: 10px; width: 100%">Grupo de Productos</h2>
       <div class="campo">
-        <button class="boton-icon"><span class="material-icons" title="nuevo">add</span></button>
-        <button class="boton-icon"><span class="material-icons" title="editar">edit</span></button>
-        <button class="boton-icon"><span class="material-icons" title="eliminar">remove</span></button>
+        <button class="boton-icon" (click)="openModalGrupoProducto()"><span class="material-icons" title="nuevo">add</span></button>
+        <button class="boton-icon" *ngIf="selectionRowGrupoProductos.selected.length == 1"><span class="material-icons" title="editar">edit</span></button>
+        <button class="boton-icon" (click)="onEliminar()" *ngIf="selectionRowGrupoProductos.selected.length > 0"><span class="material-icons" title="eliminar">remove</span></button>
       </div>
     </div>
     <div class="grid grid-cols gap-4 p-2">
       <table mat-table [dataSource]="dataSourceGrupoProductos" class="table border">
+        <ng-container matColumnDef="select">
+          <th mat-header-cell *matHeaderCellDef>
+          </th>
+          <td mat-cell *matCellDef="let element">
+            <mat-checkbox (click)="$event.stopPropagation()"
+              (change)="$event ? selectionRowGrupoProductos.toggle(element) : null">
+            </mat-checkbox>
+          </td>
+        </ng-container>
+
         <ng-container matColumnDef="clasificacion">
           <th mat-header-cell *matHeaderCellDef>Clasificación</th>
-          <td mat-cell *matCellDef="let element"> {{element.DPTDESCRIP}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.TCPDESCRIP}} </td>
         </ng-container>
 
         <ng-container matColumnDef="subClasificacion">
           <th mat-header-cell *matHeaderCellDef>Sub Clasificación</th>
-          <td mat-cell *matCellDef="let element"> {{element.DPTDESCRIP}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.STCPDESCRIP}} </td>
         </ng-container>
 
         <ng-container matColumnDef="grupoDeProducto">
           <th mat-header-cell *matHeaderCellDef>Grupo de Producto</th>
-          <td mat-cell *matCellDef="let element"> {{element.DPTDESCRIP}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.GRPDESCRIP}} </td>
         </ng-container>
 
         <ng-container matColumnDef="subGrupo">
           <th mat-header-cell *matHeaderCellDef>Sub Grupo</th>
-          <td mat-cell *matCellDef="let element"> {{element.DPTDESCRIP}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.SGPDESCRIP}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumnsGrupoProductos"></tr>
