--- a/src/app/pages/establecimiento/establecimiento.component.html
+++ b/src/app/pages/establecimiento/establecimiento.component.html
@@ -11,7 +11,9 @@
           <ng-select
             [items]="listaClaseTipo"
             bindLabel="nombre"
-            bindValue="codigo">
+            bindValue="codigo"
+            (change)="onChangeClaseTipo($event)"
+          >
           </ng-select>
         </div>
       </div>
@@ -64,7 +66,7 @@
       </mat-tab>
       <mat-tab label="Actividades">
         <div class="example-large-box mat-elevation-z4">
-          <app-tab-establec-actividades></app-tab-establec-actividades>
+          <app-tab-establec-actividades [selecionadoClaseTipo]="selecionarClaseTipo"></app-tab-establec-actividades>
       </div>
       </mat-tab>
       <mat-tab label="Almacenes/Plantas">
