--- a/src/app/pages/establecimiento/modals/md-establec-producto-controlado/md-establec-producto-controlado.component.html
+++ b/src/app/pages/establecimiento/modals/md-establec-producto-controlado/md-establec-producto-controlado.component.html
@@ -43,7 +43,7 @@
 
     <ng-container matColumnDef="descripcion">
       <th mat-header-cell *matHeaderCellDef>Descripción</th>
-      <td mat-cell *matCellDef="let element"> {{element.ACTDESCRIP}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.TPCDESCRIP}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
