--- a/src/app/pages/establecimiento/modals/md-establec-producto-controlado/md-establec-producto-controlado.component.html
+++ b/src/app/pages/establecimiento/modals/md-establec-producto-controlado/md-establec-producto-controlado.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col gap-2 p-2">
   <div class="header">
-    <h3>Busquedad de Actividad</h3>
+    <h3>Busqueda de Tipo Producto Controlado</h3>
     <button class="btn_modal_header" (click)="onNoClick()">
       <span class="material-icons">close</span>
     </button>
