--- a/src/app/pages/establecimiento/tab-establec-actividades/tab-establec-actividades.component.html
+++ b/src/app/pages/establecimiento/tab-establec-actividades/tab-establec-actividades.component.html
@@ -21,7 +21,7 @@
         </ng-container>
 
         <ng-container matColumnDef="descripcion">
-          <th mat-header-cell *matHeaderCellDef>Clasificación</th>
+          <th mat-header-cell *matHeaderCellDef>Actividades</th>
           <td mat-cell *matCellDef="let element"> {{element.ACTDESCRIP}} </td>
         </ng-container>
 
@@ -62,7 +62,7 @@
         </ng-container>
 
         <ng-container matColumnDef="descripcion">
-          <th mat-header-cell *matHeaderCellDef>Descripción</th>
+          <th mat-header-cell *matHeaderCellDef>Tipo de Prod. Controlado</th>
           <td mat-cell *matCellDef="let element"> {{element.TPCDESCRIP}} </td>
         </ng-container>
 
