--- a/src/app/pages/establecimiento/tab-establec-datos-generales/tab-establec-datos-generales.component.html
+++ b/src/app/pages/establecimiento/tab-establec-datos-generales/tab-establec-datos-generales.component.html
@@ -301,3 +301,133 @@
     </div>
   </div>
 </div>
+
+<div class="flex flex-col gap-1">
+  <div class="flex w-full">
+    <div class="m-card">
+      <div class="grid grid-cols-1 gap-1">
+        <div class="campo">
+          <div class="m-card">
+            <div class="flex justify-between items-center pr-2 pb-2">
+              <h2>Representante legal</h2>
+              <div class="flex gap-4">
+                <button class="boton-icon bnt01"><span class="material-icons">add</span></button>
+                <button class="boton-icon bnt01"><span class="material-icons">edit</span></button>
+                <button class="boton-icon bnt01"><span class="material-icons">delete</span></button>
+              </div>
+            </div>
+
+            <table mat-table [dataSource]="dataSourceRepresentanteLegal" class="table border">
+
+              <ng-container matColumnDef="apellidos_nombres">
+                <th mat-header-cell *matHeaderCellDef>Apellidos y Nombres</th>
+                <td mat-cell *matCellDef="let element"> {{element.TPCDESCRIP}} </td>
+              </ng-container>
+
+              <ng-container matColumnDef="cargo">
+                <th mat-header-cell *matHeaderCellDef>Cargo</th>
+                <td mat-cell *matCellDef="let element"> {{element.TPCDESCRIP}} </td>
+              </ng-container>
+
+              <ng-container matColumnDef="sit">
+                <th mat-header-cell *matHeaderCellDef>Sit.</th>
+                <td mat-cell *matCellDef="let element"> {{element.TPCDESCRIP}} </td>
+              </ng-container>
+
+              <tr mat-header-row *matHeaderRowDef="displayedColumnsRepresentanteLegal"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumnsRepresentanteLegal;"></tr>
+            </table>
+            <mat-paginator [pageSizeOptions]="[3, 6, 9]"
+                           showFirstLastButtons
+                           aria-label="Select page of periodic elements">
+            </mat-paginator>
+          </div>
+        </div>
+        <div class="campo">
+          <div class="m-card">
+            <div class="flex justify-between items-center pr-2 pb-2">
+              <h2>Representante legal</h2>
+              <div class="flex gap-4">
+                <button class="boton-icon bnt01"><span class="material-icons">add</span></button>
+                <button class="boton-icon bnt01"><span class="material-icons">edit</span></button>
+                <button class="boton-icon bnt01"><span class="material-icons">delete</span></button>
+              </div>
+            </div>
+
+            <table mat-table [dataSource]="dataSourcePersonal" class="table border">
+              <ng-container matColumnDef="apellidos_nombres">
+                <th mat-header-cell *matHeaderCellDef>Apellidos y Nombres</th>
+                <td mat-cell *matCellDef="let element"> {{element.TPCDESCRIP}} </td>
+              </ng-container>
+
+              <ng-container matColumnDef="cargo">
+                <th mat-header-cell *matHeaderCellDef>Cargo</th>
+                <td mat-cell *matCellDef="let element"> {{element.TPCDESCRIP}} </td>
+              </ng-container>
+
+              <ng-container matColumnDef="sit">
+                <th mat-header-cell *matHeaderCellDef>Sit.</th>
+                <td mat-cell *matCellDef="let element"> {{element.TPCDESCRIP}} </td>
+              </ng-container>
+
+              <tr mat-header-row *matHeaderRowDef="displayedColumnsPersonal"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumnsPersonal;"></tr>
+            </table>
+            <mat-paginator [pageSizeOptions]="[3, 6, 9]"
+                           showFirstLastButtons
+                           aria-label="Select page of periodic elements">
+            </mat-paginator>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="m-card">
+      <div class="m-card">
+        <div class="flex justify-between items-center pr-2 pb-2">
+          <h2>Horario de Funcionamiento</h2>
+          <div class="flex gap-3">
+            <button class="boton-icon bnt01"><span class="material-icons">add</span></button>
+            <button class="boton-icon bnt01"><span class="material-icons">edit</span></button>
+            <button class="boton-icon bnt01"><span class="material-icons">delete</span></button>
+            <button class="boton-icon bnt01"><span class="material-icons">save</span></button>
+            <button class="boton-icon bnt01"><span class="material-icons">cancel</span></button>
+          </div>
+        </div>
+
+        <table mat-table [dataSource]="dataSourceHorario" class="table border">
+          <ng-container matColumnDef="dia">
+            <th mat-header-cell *matHeaderCellDef>Día</th>
+            <td mat-cell *matCellDef="let element"> {{element.TPCDESCRIP}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="horario">
+            <th mat-header-cell *matHeaderCellDef>Horario</th>
+            <td mat-cell *matCellDef="let element"> {{element.TPCDESCRIP}} </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumnsHorario"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumnsHorario;"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[3, 6, 9]"
+                       showFirstLastButtons
+                       aria-label="Select page of periodic elements">
+        </mat-paginator>
+
+        <table mat-table [dataSource]="dataSourceHorarioDetalle" class="table border">
+          <ng-container matColumnDef="horario_detalle">
+            <th mat-header-cell *matHeaderCellDef>Detalle</th>
+            <td mat-cell *matCellDef="let element"> {{element.TPCDESCRIP}} </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumnsHorarioDetalle"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumnsHorarioDetalle;"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[3, 6, 9]"
+                       showFirstLastButtons
+                       aria-label="Select page of periodic elements">
+        </mat-paginator>
+      </div>
+    </div>
+  </div>
+</div>
