--- a/src/app/pages/establecimiento/tab-establec-datos-generales/tab-establec-datos-generales.component.html
+++ b/src/app/pages/establecimiento/tab-establec-datos-generales/tab-establec-datos-generales.component.html
@@ -311,7 +311,7 @@
             <div class="flex justify-between items-center pr-2 pb-2">
               <h2>Representante legal</h2>
               <div class="flex gap-4">
-                <button class="boton-icon bnt01"><span class="material-icons">add</span></button>
+                <button class="boton-icon bnt01" (click)="openModalRepresentanteLegal()"><span class="material-icons">add</span></button>
                 <button class="boton-icon bnt01"><span class="material-icons">edit</span></button>
                 <button class="boton-icon bnt01"><span class="material-icons">delete</span></button>
               </div>
@@ -346,7 +346,7 @@
         <div class="campo">
           <div class="m-card">
             <div class="flex justify-between items-center pr-2 pb-2">
-              <h2>Representante legal</h2>
+              <h2>Personal</h2>
               <div class="flex gap-4">
                 <button class="boton-icon bnt01"><span class="material-icons">add</span></button>
                 <button class="boton-icon bnt01"><span class="material-icons">edit</span></button>
